Spacing calc fix

--- a/src/06-components/atoms/table/table.scss
+++ b/src/06-components/atoms/table/table.scss
@@ -54,7 +54,7 @@ $border: 1px solid $black-30;
       
       th,
       td {
-        flex-basis: calc(50% - $L);
+        flex-basis: calc(50% - 16px);
         max-width: 50%;
         flex-grow: 1;
         flex-shrink: 0;
@@ -65,10 +65,10 @@ $border: 1px solid $black-30;
           border-right: 0;
         }
         @include mqmin($viewportM) {
-          flex-basis: calc(33.3333% - $M);
+          flex-basis: calc(33.3333% - 12px);
         }
         @include mqmin($viewportL) {
-          flex-basis: calc(25% - $S);
+          flex-basis: calc(25% - 8px);
         }
       }
 
